2000-09-21  Chris Toshok  <toshok@helixcode.com>

	* configure.in: add checks for sys/vfs.h and sys/mount.h

	* libgnomevfs/gnome-vfs-utils.c: sys/vfs.h doesn't exist on some
	systems, so wrap #if HAVE_SYS_VFS_H.  if there's no sys/vfs.h, try
	sys/mount.h.  also, include sys/param.h if it's available (since
	including sys/mount.h on freebsd without first including
	sys/param.h breaks, at least in some versions of 4.x.)

2000-10-04  Ramiro Estrugo  <ramiro@eazel.com>

	* acconfig.h:
	* configure.in:
	Add profiling support via --enable-profiler.

2000-10-03  Mike Fleming  <mfleming@eazel.com>

	* data/mime/gnome-vfs.keys:
	bugzilla.eazel.com 2854
	Icon view is now the default Nautilus view for viewing DAV-enabled
	HTTP directories

2000-10-03  Ramiro Estrugo  <ramiro@eazel.com>

	* configure.in:
	* gnome-vfs.spec.in:
	* modules/gconf-method.c: (read_directory):
	* modules/http-method.c: (sig_gconf_value_changed),
	(vfs_module_init):
	Update for GConf HEAD (0.9)

2000-10-03  Christophe Merlet  <christophe@merlet.net>

	* data/mime/gnome-vfs.keys: Added french strings.

2000-10-02  Mike Fleming  <mfleming@eazel.com>

	More file info caching stuff.  Now caches the contents of directories
	(for a fairly short time).  This still doesn't squeeze out as much
	performance as I had hoped, mostly because of Nautilus's habit of
	hitting ".nautilus-metafile.xml"'s .  Negative caching and updating
	of the cache following method invocation (rather than just invalidating)
	could improve performance greatly.

	* modules/http-method.c: (cache_init), (cache_shutdown),
	(cache_entry_free), (cache_uri_to_string), (cache_check_directory),
	(cache_check_directory_uri), (cache_add_no_strdup), (cache_add),
	(cache_add_uri_and_children),
	(cache_invalidate_entry_and_children),
	(cache_invalidate_uri_and_children), (cache_invalidate_uri_parent),
	(make_request), (do_create), (do_close), (make_propfind_request),
	(do_open_directory), (do_make_directory), (do_remove_directory),
	(do_move):
